--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the US</title>
   </head>
-  <body></body>
+  <body>
+    <script src="scripts/index.js"></script>
+  </body>
 </html>
