modal initial update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
     <title>Around the US</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-  <body>
+  <body class="page">
+    <div class="modal__opened">
+      <div class="modal__container">
+        <form class="modal__form">
+          <h3 class="modal__form__title">Edit profile</h3>
+          <button
+            type="button"
+            id="closeModal"
+            class="modal__form__exit-button"
+          >
+            <img
+              class="modal__form__exit-icon"
+              src="./images/close-icon.svg"
+              alt="exit button"
+            />
+          </button>
+          <input
+            type="text"
+            class="modal__form__input"
+            name="name"
+            placeholder="Jacques Cousteau"
+            required
+          />
+          <input
+            type="text"
+            class="modal__form__input"
+            name="description"
+            placeholder="Explorer"
+            required
+          />
+          <button type="submit" class="modal__form__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="scripts/index.js"></script>
   </body>
 </html>
