add 'add button' to profile section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,18 @@
           ></button>
           <p class="profile__description">Explorer</p>
         </div>
+        <button type="button" class="profile__add-button"></button>
+      </section>
+      <section class="cards">
+        <ul class="cards__list">
+          <template id="cardTemplate">
+            <li class="card">
+              <img alt="" class="card__image" src="" />
+              <h2 class="card__title"></h2>
+              <button type="button" class="card__like-button"></button>
+            </li>
+          </template>
+        </ul>
       </section>
     </main>
 
