--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
         </ul>
       </section>
     </main>
-
+    <footer class="footer">
+      <p class="footer__copyright">&copy; Around the U.S. 2022</p>
+    </footer>
     <div class="modal">
       <div class="modal__container">
         <form class="modal__form">
