2nd revision updates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             id="nameInput"
             class="modal__form__input"
             name="name"
-            placeholder="Jacques Cousteau"
+            placeholder="Name"
             required
           />
           <input
@@ -76,7 +76,7 @@
             id="descriptionInput"
             class="modal__form__input"
             name="description"
-            placeholder="Explorer"
+            placeholder="Description"
             required
           />
           <button type="submit" class="modal__form__button">Save</button>
