implementation of delete button

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
           <template id="cardsTemplate">
             <li class="card">
               <img alt="" class="card__image" src="" />
-              <h2 class="card__title"></h2>
-              <button type="button" class="card__like-button"></button>
+              <button type="button" class="card__delete-button"></button>
+              <div class="card_description">
+                <h2 class="card__title"></h2>
+                <button type="button" class="card__like-button"></button>
+              </div>
             </li>
           </template>
         </ul>
