--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <p class="footer__copyright">&copy; Around the U.S. 2022</p>
     </footer>
     <div class="modal" id="edit-modal">
-      <div class="modal__container">
+      <div class="modal__container-form">
         <form class="modal__form" name="edit-modal__form">
           <h3 class="modal__form__title">Edit profile</h3>
           <button
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div class="modal" id="add-modal">
-      <div class="modal__container">
+      <div class="modal__container-form">
         <form class="modal__form" name="add-modal__form">
           <h3 class="modal__form__title">New Place</h3>
           <button
@@ -125,6 +125,20 @@
         </form>
       </div>
     </div>
+    <div class="modal" id="preview-modal">
+      <div class="modal__container-preview">
+        <div class="modal__preview">
+          <button
+            type="button"
+            class="modal__preview__exit-button"
+            id="closePreviewModal"
+          ></button>
+          <img class="modal__preview__image" alt="" src="" />
+          <p class="modal__preview__caption"></p>
+        </div>
+      </div>
+    </div>
+  </div>
     <script src="scripts/index.js"></script>
   </body>
 </html>
