--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul class="cards__list">
           <template id="cardsTemplate">
             <li class="card">
-              <img alt="" class="card__image" src="" />
+              <img alt="" class="card__image" src=" " />
               <button type="button" class="card__delete-button"></button>
               <div class="card_description">
                 <h2 class="card__title"></h2>
@@ -107,7 +107,7 @@
           </button>
           <input
             type="text"
-            id="nameInput"
+            id="titleInput"
             class="modal__form__input"
             name="title"
             placeholder="Title"
@@ -115,7 +115,7 @@
           />
           <input
             type="text"
-            id="descriptionInput"
+            id="linkInput"
             class="modal__form__input"
             name="link"
             placeholder="Image Link"
@@ -133,12 +133,11 @@
             class="modal__preview__exit-button"
             id="closePreviewModal"
           ></button>
-          <img class="modal__preview__image" alt="" src="" />
+          <img class="modal__preview__image" alt="" src=" " />
           <p class="modal__preview__caption"></p>
         </div>
       </div>
     </div>
-  </div>
     <script src="scripts/index.js"></script>
   </body>
 </html>
